
	* Fixed bug #17211: Thumbnails in TCEforms have broken clickMenu

2011-01-22  Ingo Renner  <ingo@typo3.org>

	* Fixed incorrect english label for table tt_content from "Pagecontent" to "Page Content"
	* Fixed bug #17213: Names of backend layout columns not displayed properly
	* Follow-up to #17213: icons to add content were shifted down a bit, credits Steffen Gebert

2011-01-22  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #16680: Deactivate live search if list module is not available
	* Fixed bug #17045: Live Search uses id=0 to display all search results to non-admin users

2011-01-22  Susann Moog  <typo3@susanne-moog.de>

	* Fixed bug #17091: Pagetree: undelete recursive deleted pages only undeletes the top node, not the other child nodes of the deleted page (Thanks to Stefan Galinski)
	* Fixed bug #17204: Pagetree: Only call the singleClick method if the navigation component is visible (Thanks to Stefan Galinski)
	* Fixed bug #17158: Pagetree: now uses [No title] from language file if no title is there (Thanks to Stefan Galinski)
	* Fixed bug #17208: Backwards compatibility broken (top.nav) and JS errors when editing files in file list module

2011-01-22  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17107: page/branch action submenus close whole menu on click (Thanks to Stefan Galinski)
	* Fixed bug #17145: Replace label "Hide" in Pagetree menu with "Disable" (Thanks to Stefan Galinski)
	* Fixed bug #17161: be_layout foreign_table_where excludes local page when GRSP set (Thanks to Jo Hasenau)
	* Fixed bug #16085: Tool tips for collapsing and resizing panels missing

2011-01-21  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised version numbers of Extbase and Fluid to 1.3.0RC1.

2011-01-21  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #16996: CSH tooltip shows for too long time - only hold tip when more info is available
	* Follow-up to #17162: Missing localization in t3lib_tsstyleconfig - add HSC