@@ -11,6 +11,7 @@
 	* Fixed incorrect english label for table tt_content from "Pagecontent" to "Page Content"
 	* Fixed bug #17213: Names of backend layout columns not displayed properly
 	* Follow-up to #17213: icons to add content were shifted down a bit, credits Steffen Gebert
+	* Fixed bug #16681: Live-Search: Taking focus from search field should show tooltip "Enter search term" again, credits Jeff Segars
 
 2011-01-22  Jeff Segars  <jeff@webempoweredchurch.org>
 
